<resources>
    <string name="app_name">HackTrain</string>
    <string name="search_for_a_specific_book">Search For A Specific Book</string>
    <string name="enter_book_name">Enter Book Name..</string>
    <string name="search">Search</string>
    <string name="notifiction">Notifiction</string>
    <string name="home_page">Home Page</string>
    <string name="exchnage_book">Exchnage Book</string>
    <string name="login_welcome">Expand Your Galaxy</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="loginbutton">login</string>
    <string name="or">or login with</string>
    <string name="signup">sign up</string>
</resources>
