<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_welcome"
            android:textAlignment="center"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:fontFamily="cursive"
            android:layout_marginTop="110dp"
            />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:id="@+id/username"
            android:layout_gravity="center"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            android:layout_marginTop="60dp"
            android:textColorHint="@color/pinky"
            android:inputType="text"
            android:backgroundTint="@android:color/white"
            android:textColor="@color/pinky"
            android:alpha="0.7"
            />
        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:id="@+id/password"
            android:layout_gravity="center"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/pinky"
            android:textColor="@color/pinky"
            android:inputType="textPassword"
            android:alpha="0.7"
            android:backgroundTint="@android:color/white"
            />
        <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/loginbutton"
            android:inputType="text"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:alpha="0.8"
            android:background="@drawable/loginbutton"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            android:id="@+id/login"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:layout_marginTop="30dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginTop="30dp"
            >

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/fb"
                android:scaleType="centerInside"
                android:background="@null"
                android:id="@+id/fb"
                android:alpha="0.8"

                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/google"
                android:scaleType="centerInside"
                android:id="@+id/goodle"
                android:background="@null"
                android:alpha="0.8"
                />
            <ImageButton
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:src="@drawable/twitter"
                android:scaleType="centerInside"
                android:id="@+id/twitter"
                android:background="@null"
                android:alpha="0.8"
                />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@null"
            android:visibility="invisible"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.4"
            android:layout_gravity="bottom"
            android:layout_marginBottom="0dp"
            android:text="Sign Up"
            android:textSize="20sp"
            android:textColor="@color/pinky"
            android:background="@color/white"
            android:alpha="0.8"
            android:textStyle="bold"
            android:id="@+id/signup"
            />

    </LinearLayout>

</FrameLayout>