<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchForABook"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:padding="8dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/books"
                android:layout_marginEnd="8dp"
              />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_for_a_specific_book"
                android:textSize="26sp"
                android:fontFamily="cursive"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <AutoCompleteTextView
                android:id="@+id/auto_complete_book_name"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:layout_marginTop="30dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/gradient_button"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:drawableTint="@color/colorButton"
                android:paddingLeft="5dp"
                android:inputType="text"
                android:hint="@string/enter_book_name"
                android:gravity="center"
                android:completionThreshold="1"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
            <ImageView
                android:id="@+id/img_camera"
                android:layout_marginTop="30dp"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:src="@drawable/camera_search"
                android:tint="@color/colorButton"/>
        </LinearLayout>
        <Button
            android:id="@+id/btn_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_gravity="right"
            android:textAllCaps="false"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/colorButton"
            android:textColor="@android:color/white"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"

            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:gravity="center">
            <ImageView
                android:id="@+id/img_capture_camera"
                android:visibility="gone"
                android:layout_width="150dp"
                android:layout_height="150dp" />
            <TextView
                android:id="@+id/txt_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_search_result"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:src="@drawable/no_result"/>
            <include layout="@layout/search_result"/>

        </LinearLayout>
    </LinearLayout>

</ScrollView>